[gd_scene load_steps=19 format=3 uid="uid://c0t2xmcfxvvg7"]

[ext_resource type="Texture2D" uid="uid://dee05c05iv133" path="res://assets/images/tilemaps/background.png" id="1_dw6wy"]
[ext_resource type="Texture2D" uid="uid://bbqqgwkln40r3" path="res://assets/atlas_48x.png" id="1_p6aan"]
[ext_resource type="TileSet" uid="uid://mlh315rt7ody" path="res://assets/tilemaps/tilemap_small.tres" id="4_hqxkq"]
[ext_resource type="Script" path="res://scripts/tilemap_small.gd" id="5_84jxo"]
[ext_resource type="Texture2D" uid="uid://b5gihrvlyqkrp" path="res://assets/images/tilemaps/tilemap_large.png" id="5_tqs2y"]
[ext_resource type="Script" path="res://scripts/tilemap_large_1.gd" id="6_jcq33"]
[ext_resource type="Script" path="res://scripts/tilemap_large.gd" id="6_vscps"]
[ext_resource type="Script" path="res://scripts/tilemap_large_3.gd" id="7_rcovf"]
[ext_resource type="Script" path="res://scripts/tilemap_large_4.gd" id="8_opmnk"]
[ext_resource type="Script" path="res://scenes/tutorial.gd" id="10_5s7sa"]
[ext_resource type="AudioStream" uid="uid://deiotjamteild" path="res://assets/music/global_bgm.wav" id="11_mkjhu"]
[ext_resource type="AudioStream" uid="uid://clcndxcvrawql" path="res://assets/sfx/plant potato.wav" id="12_a2i22"]
[ext_resource type="AudioStream" uid="uid://wk2d3byw7eji" path="res://assets/sfx/potato pop.wav" id="13_ar50n"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_kyndq"]
texture = ExtResource("1_p6aan")
texture_region_size = Vector2i(48, 48)
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
16:0/0 = 0
17:0/0 = 0
18:0/0 = 0
19:0/0 = 0
20:0/0 = 0
21:0/0 = 0
22:0/0 = 0
23:0/0 = 0
27:0/0 = 0
28:0/0 = 0
30:0/0 = 0
31:0/0 = 0
33:0/0 = 0
34:0/0 = 0
35:0/0 = 0
36:0/0 = 0
37:0/0 = 0
38:0/0 = 0
39:0/0 = 0
40:0/0 = 0
41:0/0 = 0
42:0/0 = 0
43:0/0 = 0
44:0/0 = 0
45:0/0 = 0
46:0/0 = 0
47:0/0 = 0
48:0/0 = 0
48:0/0/custom_data_3 = true
49:0/0 = 0
49:0/0/custom_data_3 = true
50:0/0 = 0
50:0/0/custom_data_3 = true
51:0/0 = 0
51:0/0/custom_data_3 = true
52:0/0 = 0
53:0/0 = 0
54:0/0 = 0
55:0/0 = 0
56:0/0 = 0
57:0/0 = 0
58:0/0 = 0
59:0/0 = 0
72:0/0 = 0
73:0/0 = 0
74:0/0 = 0
75:0/0 = 0
76:0/0 = 0
77:0/0 = 0
78:0/0 = 0
79:0/0 = 0
80:0/0 = 0
81:0/0 = 0
82:0/0 = 0
83:0/0 = 0
84:0/0 = 0
85:0/0 = 0
86:0/0 = 0
87:0/0 = 0
88:0/0 = 0
89:0/0 = 0
90:0/0 = 0
91:0/0 = 0
92:0/0 = 0
93:0/0 = 0
94:0/0 = 0
95:0/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
14:1/0 = 0
15:1/0 = 0
16:1/0 = 0
17:1/0 = 0
18:1/0 = 0
19:1/0 = 0
20:1/0 = 0
21:1/0 = 0
22:1/0 = 0
23:1/0 = 0
24:1/0 = 0
25:1/0 = 0
26:1/0 = 0
27:1/0 = 0
28:1/0 = 0
29:1/0 = 0
30:1/0 = 0
31:1/0 = 0
32:1/0 = 0
33:1/0 = 0
34:1/0 = 0
35:1/0 = 0
36:1/0 = 0
37:1/0 = 0
38:1/0 = 0
39:1/0 = 0
40:1/0 = 0
41:1/0 = 0
42:1/0 = 0
43:1/0 = 0
44:1/0 = 0
45:1/0 = 0
46:1/0 = 0
47:1/0 = 0
48:1/0 = 0
49:1/0 = 0
50:1/0 = 0
51:1/0 = 0
52:1/0 = 0
53:1/0 = 0
54:1/0 = 0
55:1/0 = 0
56:1/0 = 0
57:1/0 = 0
58:1/0 = 0
59:1/0 = 0
72:1/0 = 0
73:1/0 = 0
74:1/0 = 0
75:1/0 = 0
76:1/0 = 0
77:1/0 = 0
78:1/0 = 0
79:1/0 = 0
80:1/0 = 0
81:1/0 = 0
82:1/0 = 0
83:1/0 = 0
84:1/0 = 0
85:1/0 = 0
86:1/0 = 0
87:1/0 = 0
88:1/0 = 0
89:1/0 = 0
90:1/0 = 0
91:1/0 = 0
92:1/0 = 0
93:1/0 = 0
94:1/0 = 0
95:1/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
12:2/0 = 0
13:2/0 = 0
14:2/0 = 0
15:2/0 = 0
16:2/0 = 0
17:2/0 = 0
18:2/0 = 0
19:2/0 = 0
20:2/0 = 0
21:2/0 = 0
22:2/0 = 0
23:2/0 = 0
24:2/0 = 0
25:2/0 = 0
26:2/0 = 0
27:2/0 = 0
28:2/0 = 0
29:2/0 = 0
30:2/0 = 0
31:2/0 = 0
32:2/0 = 0
33:2/0 = 0
34:2/0 = 0
35:2/0 = 0
36:2/0 = 0
37:2/0 = 0
38:2/0 = 0
39:2/0 = 0
40:2/0 = 0
41:2/0 = 0
42:2/0 = 0
43:2/0 = 0
44:2/0 = 0
45:2/0 = 0
46:2/0 = 0
47:2/0 = 0
48:2/0 = 0
49:2/0 = 0
50:2/0 = 0
51:2/0 = 0
52:2/0 = 0
53:2/0 = 0
54:2/0 = 0
55:2/0 = 0
56:2/0 = 0
57:2/0 = 0
58:2/0 = 0
59:2/0 = 0
65:2/0 = 0
66:2/0 = 0
72:2/0 = 0
73:2/0 = 0
74:2/0 = 0
75:2/0 = 0
76:2/0 = 0
77:2/0 = 0
78:2/0 = 0
79:2/0 = 0
80:2/0 = 0
81:2/0 = 0
82:2/0 = 0
83:2/0 = 0
87:2/0 = 0
88:2/0 = 0
89:2/0 = 0
90:2/0 = 0
91:2/0 = 0
92:2/0 = 0
93:2/0 = 0
94:2/0 = 0
95:2/0 = 0
8:3/0 = 0
9:3/0 = 0
12:3/0 = 0
13:3/0 = 0
14:3/0 = 0
15:3/0 = 0
16:3/0 = 0
17:3/0 = 0
18:3/0 = 0
19:3/0 = 0
20:3/0 = 0
21:3/0 = 0
22:3/0 = 0
23:3/0 = 0
24:3/0 = 0
25:3/0 = 0
26:3/0 = 0
27:3/0 = 0
28:3/0 = 0
29:3/0 = 0
30:3/0 = 0
31:3/0 = 0
32:3/0 = 0
33:3/0 = 0
34:3/0 = 0
35:3/0 = 0
36:3/0 = 0
37:3/0 = 0
38:3/0 = 0
39:3/0 = 0
40:3/0 = 0
41:3/0 = 0
42:3/0 = 0
43:3/0 = 0
44:3/0 = 0
45:3/0 = 0
47:3/0 = 0
48:3/0 = 0
49:3/0 = 0
50:3/0 = 0
51:3/0 = 0
52:3/0 = 0
52:3/0/custom_data_0 = true
53:3/0 = 0
54:3/0 = 0
54:3/0/custom_data_1 = true
55:3/0 = 0
56:3/0 = 0
57:3/0 = 0
58:3/0 = 0
59:3/0 = 0
63:3/0 = 0
64:3/0 = 0
65:3/0 = 0
66:3/0 = 0
67:3/0 = 0
68:3/0 = 0
72:3/0 = 0
73:3/0 = 0
74:3/0 = 0
75:3/0 = 0
76:3/0 = 0
77:3/0 = 0
78:3/0 = 0
79:3/0 = 0
80:3/0 = 0
81:3/0 = 0
82:3/0 = 0
83:3/0 = 0
84:3/0 = 0
85:3/0 = 0
86:3/0 = 0
87:3/0 = 0
88:3/0 = 0
89:3/0 = 0
90:3/0 = 0
91:3/0 = 0
92:3/0 = 0
93:3/0 = 0
94:3/0 = 0
95:3/0 = 0
2:4/0 = 0
3:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
12:4/0 = 0
13:4/0 = 0
14:4/0 = 0
15:4/0 = 0
16:4/0 = 0
17:4/0 = 0
18:4/0 = 0
19:4/0 = 0
20:4/0 = 0
21:4/0 = 0
22:4/0 = 0
23:4/0 = 0
24:4/0 = 0
25:4/0 = 0
26:4/0 = 0
27:4/0 = 0
28:4/0 = 0
29:4/0 = 0
30:4/0 = 0
31:4/0 = 0
32:4/0 = 0
33:4/0 = 0
34:4/0 = 0
35:4/0 = 0
36:4/0 = 0
37:4/0 = 0
38:4/0 = 0
39:4/0 = 0
40:4/0 = 0
41:4/0 = 0
42:4/0 = 0
43:4/0 = 0
44:4/0 = 0
45:4/0 = 0
46:4/0 = 0
47:4/0 = 0
48:4/0 = 0
49:4/0 = 0
50:4/0 = 0
51:4/0 = 0
52:4/0 = 0
52:4/0/custom_data_2 = true
52:4/0/custom_data_4 = "Red_Potato"
53:4/0 = 0
54:4/0 = 0
55:4/0 = 0
56:4/0 = 0
57:4/0 = 0
58:4/0 = 0
59:4/0 = 0
64:4/0 = 0
65:4/0 = 0
66:4/0 = 0
67:4/0 = 0
68:4/0 = 0
72:4/0 = 0
73:4/0 = 0
74:4/0 = 0
75:4/0 = 0
76:4/0 = 0
77:4/0 = 0
78:4/0 = 0
79:4/0 = 0
80:4/0 = 0
81:4/0 = 0
82:4/0 = 0
83:4/0 = 0
84:4/0 = 0
85:4/0 = 0
86:4/0 = 0
87:4/0 = 0
88:4/0 = 0
89:4/0 = 0
90:4/0 = 0
91:4/0 = 0
92:4/0 = 0
93:4/0 = 0
94:4/0 = 0
95:4/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
12:5/0 = 0
13:5/0 = 0
14:5/0 = 0
15:5/0 = 0
16:5/0 = 0
17:5/0 = 0
18:5/0 = 0
19:5/0 = 0
20:5/0 = 0
21:5/0 = 0
22:5/0 = 0
23:5/0 = 0
24:5/0 = 0
25:5/0 = 0
26:5/0 = 0
27:5/0 = 0
28:5/0 = 0
29:5/0 = 0
30:5/0 = 0
31:5/0 = 0
32:5/0 = 0
33:5/0 = 0
34:5/0 = 0
35:5/0 = 0
36:5/0 = 0
37:5/0 = 0
38:5/0 = 0
39:5/0 = 0
40:5/0 = 0
41:5/0 = 0
42:5/0 = 0
43:5/0 = 0
44:5/0 = 0
45:5/0 = 0
46:5/0 = 0
47:5/0 = 0
48:5/0 = 0
49:5/0 = 0
50:5/0 = 0
51:5/0 = 0
52:5/0 = 0
53:5/0 = 0
54:5/0 = 0
54:5/0/custom_data_2 = true
54:5/0/custom_data_4 = "Brown_Potato"
55:5/0 = 0
56:5/0 = 0
57:5/0 = 0
58:5/0 = 0
59:5/0 = 0
65:5/0 = 0
66:5/0 = 0
67:5/0 = 0
72:5/0 = 0
73:5/0 = 0
74:5/0 = 0
75:5/0 = 0
76:5/0 = 0
77:5/0 = 0
78:5/0 = 0
79:5/0 = 0
80:5/0 = 0
81:5/0 = 0
82:5/0 = 0
83:5/0 = 0
84:5/0 = 0
85:5/0 = 0
86:5/0 = 0
87:5/0 = 0
88:5/0 = 0
89:5/0 = 0
90:5/0 = 0
91:5/0 = 0
92:5/0 = 0
93:5/0 = 0
94:5/0 = 0
95:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
12:6/0 = 0
13:6/0 = 0
14:6/0 = 0
15:6/0 = 0
16:6/0 = 0
17:6/0 = 0
18:6/0 = 0
19:6/0 = 0
20:6/0 = 0
21:6/0 = 0
22:6/0 = 0
23:6/0 = 0
24:6/0 = 0
25:6/0 = 0
26:6/0 = 0
27:6/0 = 0
28:6/0 = 0
29:6/0 = 0
30:6/0 = 0
31:6/0 = 0
32:6/0 = 0
33:6/0 = 0
34:6/0 = 0
35:6/0 = 0
36:6/0 = 0
37:6/0 = 0
38:6/0 = 0
39:6/0 = 0
40:6/0 = 0
41:6/0 = 0
42:6/0 = 0
43:6/0 = 0
44:6/0 = 0
45:6/0 = 0
46:6/0 = 0
49:6/0 = 0
50:6/0 = 0
51:6/0 = 0
52:6/0 = 0
53:6/0 = 0
54:6/0 = 0
55:6/0 = 0
57:6/0 = 0
58:6/0 = 0
59:6/0 = 0
60:6/0 = 0
61:6/0 = 0
62:6/0 = 0
63:6/0 = 0
64:6/0 = 0
65:6/0 = 0
66:6/0 = 0
67:6/0 = 0
68:6/0 = 0
69:6/0 = 0
70:6/0 = 0
71:6/0 = 0
72:6/0 = 0
73:6/0 = 0
74:6/0 = 0
75:6/0 = 0
76:6/0 = 0
77:6/0 = 0
78:6/0 = 0
79:6/0 = 0
80:6/0 = 0
81:6/0 = 0
82:6/0 = 0
83:6/0 = 0
84:6/0 = 0
85:6/0 = 0
86:6/0 = 0
87:6/0 = 0
88:6/0 = 0
89:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
11:7/0 = 0
12:7/0 = 0
13:7/0 = 0
14:7/0 = 0
15:7/0 = 0
16:7/0 = 0
17:7/0 = 0
18:7/0 = 0
19:7/0 = 0
20:7/0 = 0
21:7/0 = 0
22:7/0 = 0
23:7/0 = 0
24:7/0 = 0
25:7/0 = 0
26:7/0 = 0
27:7/0 = 0
28:7/0 = 0
29:7/0 = 0
30:7/0 = 0
31:7/0 = 0
32:7/0 = 0
33:7/0 = 0
34:7/0 = 0
35:7/0 = 0
36:7/0 = 0
37:7/0 = 0
38:7/0 = 0
39:7/0 = 0
40:7/0 = 0
41:7/0 = 0
42:7/0 = 0
43:7/0 = 0
44:7/0 = 0
45:7/0 = 0
46:7/0 = 0
48:7/0 = 0
49:7/0 = 0
50:7/0 = 0
51:7/0 = 0
52:7/0 = 0
53:7/0 = 0
54:7/0 = 0
55:7/0 = 0
56:7/0 = 0
57:7/0 = 0
58:7/0 = 0
59:7/0 = 0
60:7/0 = 0
61:7/0 = 0
62:7/0 = 0
63:7/0 = 0
64:7/0 = 0
65:7/0 = 0
66:7/0 = 0
67:7/0 = 0
68:7/0 = 0
69:7/0 = 0
70:7/0 = 0
71:7/0 = 0
72:7/0 = 0
73:7/0 = 0
74:7/0 = 0
75:7/0 = 0
76:7/0 = 0
77:7/0 = 0
78:7/0 = 0
79:7/0 = 0
80:7/0 = 0
81:7/0 = 0
82:7/0 = 0
83:7/0 = 0
84:7/0 = 0
85:7/0 = 0
86:7/0 = 0
87:7/0 = 0
88:7/0 = 0
89:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
11:8/0 = 0
12:8/0 = 0
13:8/0 = 0
14:8/0 = 0
15:8/0 = 0
16:8/0 = 0
17:8/0 = 0
18:8/0 = 0
19:8/0 = 0
20:8/0 = 0
21:8/0 = 0
22:8/0 = 0
23:8/0 = 0
24:8/0 = 0
25:8/0 = 0
26:8/0 = 0
27:8/0 = 0
28:8/0 = 0
29:8/0 = 0
30:8/0 = 0
31:8/0 = 0
32:8/0 = 0
33:8/0 = 0
34:8/0 = 0
35:8/0 = 0
36:8/0 = 0
37:8/0 = 0
38:8/0 = 0
39:8/0 = 0
40:8/0 = 0
41:8/0 = 0
42:8/0 = 0
43:8/0 = 0
44:8/0 = 0
45:8/0 = 0
46:8/0 = 0
48:8/0 = 0
49:8/0 = 0
50:8/0 = 0
51:8/0 = 0
52:8/0 = 0
53:8/0 = 0
54:8/0 = 0
55:8/0 = 0
56:8/0 = 0
57:8/0 = 0
58:8/0 = 0
59:8/0 = 0
60:8/0 = 0
61:8/0 = 0
62:8/0 = 0
63:8/0 = 0
64:8/0 = 0
65:8/0 = 0
66:8/0 = 0
67:8/0 = 0
68:8/0 = 0
69:8/0 = 0
70:8/0 = 0
71:8/0 = 0
72:8/0 = 0
73:8/0 = 0
74:8/0 = 0
75:8/0 = 0
76:8/0 = 0
77:8/0 = 0
78:8/0 = 0
79:8/0 = 0
80:8/0 = 0
81:8/0 = 0
82:8/0 = 0
83:8/0 = 0
84:8/0 = 0
85:8/0 = 0
86:8/0 = 0
87:8/0 = 0
88:8/0 = 0
89:8/0 = 0
90:8/0 = 0
91:8/0 = 0
92:8/0 = 0
93:8/0 = 0
94:8/0 = 0
95:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
10:9/0 = 0
11:9/0 = 0
12:9/0 = 0
13:9/0 = 0
14:9/0 = 0
15:9/0 = 0
16:9/0 = 0
17:9/0 = 0
18:9/0 = 0
19:9/0 = 0
20:9/0 = 0
21:9/0 = 0
22:9/0 = 0
23:9/0 = 0
33:9/0 = 0
34:9/0 = 0
35:9/0 = 0
39:9/0 = 0
40:9/0 = 0
41:9/0 = 0
42:9/0 = 0
43:9/0 = 0
44:9/0 = 0
46:9/0 = 0
48:9/0 = 0
49:9/0 = 0
50:9/0 = 0
51:9/0 = 0
52:9/0 = 0
53:9/0 = 0
54:9/0 = 0
55:9/0 = 0
56:9/0 = 0
57:9/0 = 0
58:9/0 = 0
59:9/0 = 0
63:9/0 = 0
64:9/0 = 0
65:9/0 = 0
66:9/0 = 0
67:9/0 = 0
68:9/0 = 0
72:9/0 = 0
73:9/0 = 0
74:9/0 = 0
75:9/0 = 0
76:9/0 = 0
77:9/0 = 0
78:9/0 = 0
79:9/0 = 0
80:9/0 = 0
81:9/0 = 0
82:9/0 = 0
83:9/0 = 0
90:9/0 = 0
91:9/0 = 0
92:9/0 = 0
93:9/0 = 0
94:9/0 = 0
95:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
5:10/0 = 0
6:10/0 = 0
7:10/0 = 0
8:10/0 = 0
9:10/0 = 0
10:10/0 = 0
11:10/0 = 0
12:10/0 = 0
13:10/0 = 0
14:10/0 = 0
15:10/0 = 0
16:10/0 = 0
17:10/0 = 0
18:10/0 = 0
19:10/0 = 0
20:10/0 = 0
21:10/0 = 0
22:10/0 = 0
23:10/0 = 0
29:10/0 = 0
30:10/0 = 0
31:10/0 = 0
32:10/0 = 0
33:10/0 = 0
34:10/0 = 0
35:10/0 = 0
39:10/0 = 0
40:10/0 = 0
41:10/0 = 0
42:10/0 = 0
43:10/0 = 0
44:10/0 = 0
45:10/0 = 0
46:10/0 = 0
47:10/0 = 0
48:10/0 = 0
49:10/0 = 0
50:10/0 = 0
51:10/0 = 0
52:10/0 = 0
53:10/0 = 0
54:10/0 = 0
55:10/0 = 0
56:10/0 = 0
57:10/0 = 0
58:10/0 = 0
59:10/0 = 0
64:10/0 = 0
65:10/0 = 0
66:10/0 = 0
67:10/0 = 0
68:10/0 = 0
72:10/0 = 0
73:10/0 = 0
74:10/0 = 0
75:10/0 = 0
76:10/0 = 0
77:10/0 = 0
78:10/0 = 0
79:10/0 = 0
80:10/0 = 0
81:10/0 = 0
82:10/0 = 0
83:10/0 = 0
90:10/0 = 0
91:10/0 = 0
92:10/0 = 0
93:10/0 = 0
94:10/0 = 0
95:10/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
6:11/0 = 0
7:11/0 = 0
8:11/0 = 0
9:11/0 = 0
10:11/0 = 0
11:11/0 = 0
12:11/0 = 0
13:11/0 = 0
14:11/0 = 0
15:11/0 = 0
16:11/0 = 0
17:11/0 = 0
18:11/0 = 0
19:11/0 = 0
20:11/0 = 0
21:11/0 = 0
22:11/0 = 0
23:11/0 = 0
27:11/0 = 0
28:11/0 = 0
29:11/0 = 0
30:11/0 = 0
31:11/0 = 0
32:11/0 = 0
33:11/0 = 0
34:11/0 = 0
35:11/0 = 0
39:11/0 = 0
40:11/0 = 0
41:11/0 = 0
42:11/0 = 0
43:11/0 = 0
44:11/0 = 0
45:11/0 = 0
46:11/0 = 0
47:11/0 = 0
48:11/0 = 0
49:11/0 = 0
50:11/0 = 0
51:11/0 = 0
52:11/0 = 0
53:11/0 = 0
54:11/0 = 0
55:11/0 = 0
56:11/0 = 0
57:11/0 = 0
58:11/0 = 0
59:11/0 = 0
64:11/0 = 0
65:11/0 = 0
66:11/0 = 0
72:11/0 = 0
73:11/0 = 0
74:11/0 = 0
75:11/0 = 0
76:11/0 = 0
77:11/0 = 0
78:11/0 = 0
79:11/0 = 0
80:11/0 = 0
81:11/0 = 0
82:11/0 = 0
83:11/0 = 0
90:11/0 = 0
91:11/0 = 0
92:11/0 = 0
93:11/0 = 0
94:11/0 = 0
95:11/0 = 0
0:12/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
4:12/0 = 0
5:12/0 = 0
6:12/0 = 0
7:12/0 = 0
8:12/0 = 0
10:12/0 = 0
11:12/0 = 0
12:12/0 = 0
13:12/0 = 0
14:12/0 = 0
15:12/0 = 0
16:12/0 = 0
17:12/0 = 0
18:12/0 = 0
19:12/0 = 0
20:12/0 = 0
21:12/0 = 0
22:12/0 = 0
23:12/0 = 0
27:12/0 = 0
28:12/0 = 0
29:12/0 = 0
30:12/0 = 0
31:12/0 = 0
32:12/0 = 0
33:12/0 = 0
34:12/0 = 0
35:12/0 = 0
40:12/0 = 0
41:12/0 = 0
43:12/0 = 0
48:12/0 = 0
49:12/0 = 0
50:12/0 = 0
51:12/0 = 0
52:12/0 = 0
53:12/0 = 0
54:12/0 = 0
55:12/0 = 0
56:12/0 = 0
57:12/0 = 0
58:12/0 = 0
59:12/0 = 0
63:12/0 = 0
64:12/0 = 0
66:12/0 = 0
67:12/0 = 0
68:12/0 = 0
69:12/0 = 0
70:12/0 = 0
71:12/0 = 0
72:12/0 = 0
73:12/0 = 0
74:12/0 = 0
75:12/0 = 0
76:12/0 = 0
77:12/0 = 0
78:12/0 = 0
79:12/0 = 0
80:12/0 = 0
81:12/0 = 0
82:12/0 = 0
83:12/0 = 0
84:12/0 = 0
85:12/0 = 0
86:12/0 = 0
93:12/0 = 0
94:12/0 = 0
95:12/0 = 0
0:13/0 = 0
1:13/0 = 0
2:13/0 = 0
3:13/0 = 0
4:13/0 = 0
5:13/0 = 0
6:13/0 = 0
7:13/0 = 0
8:13/0 = 0
9:13/0 = 0
10:13/0 = 0
11:13/0 = 0
12:13/0 = 0
13:13/0 = 0
14:13/0 = 0
15:13/0 = 0
16:13/0 = 0
17:13/0 = 0
18:13/0 = 0
19:13/0 = 0
20:13/0 = 0
21:13/0 = 0
22:13/0 = 0
23:13/0 = 0
27:13/0 = 0
28:13/0 = 0
29:13/0 = 0
30:13/0 = 0
31:13/0 = 0
32:13/0 = 0
33:13/0 = 0
34:13/0 = 0
35:13/0 = 0
39:13/0 = 0
40:13/0 = 0
41:13/0 = 0
42:13/0 = 0
43:13/0 = 0
44:13/0 = 0
48:13/0 = 0
49:13/0 = 0
50:13/0 = 0
51:13/0 = 0
52:13/0 = 0
53:13/0 = 0
54:13/0 = 0
55:13/0 = 0
56:13/0 = 0
57:13/0 = 0
58:13/0 = 0
59:13/0 = 0
62:13/0 = 0
63:13/0 = 0
64:13/0 = 0
67:13/0 = 0
68:13/0 = 0
69:13/0 = 0
70:13/0 = 0
71:13/0 = 0
72:13/0 = 0
73:13/0 = 0
74:13/0 = 0
75:13/0 = 0
76:13/0 = 0
77:13/0 = 0
78:13/0 = 0
79:13/0 = 0
80:13/0 = 0
81:13/0 = 0
82:13/0 = 0
83:13/0 = 0
84:13/0 = 0
85:13/0 = 0
86:13/0 = 0
92:13/0 = 0
93:13/0 = 0
94:13/0 = 0
95:13/0 = 0
0:14/0 = 0
1:14/0 = 0
2:14/0 = 0
3:14/0 = 0
4:14/0 = 0
5:14/0 = 0
6:14/0 = 0
7:14/0 = 0
8:14/0 = 0
9:14/0 = 0
10:14/0 = 0
11:14/0 = 0
13:14/0 = 0
14:14/0 = 0
15:14/0 = 0
16:14/0 = 0
17:14/0 = 0
18:14/0 = 0
19:14/0 = 0
20:14/0 = 0
21:14/0 = 0
22:14/0 = 0
23:14/0 = 0
27:14/0 = 0
28:14/0 = 0
29:14/0 = 0
30:14/0 = 0
31:14/0 = 0
32:14/0 = 0
33:14/0 = 0
34:14/0 = 0
35:14/0 = 0
36:14/0 = 0
39:14/0 = 0
40:14/0 = 0
41:14/0 = 0
42:14/0 = 0
43:14/0 = 0
44:14/0 = 0
48:14/0 = 0
49:14/0 = 0
50:14/0 = 0
51:14/0 = 0
52:14/0 = 0
53:14/0 = 0
54:14/0 = 0
55:14/0 = 0
56:14/0 = 0
57:14/0 = 0
58:14/0 = 0
59:14/0 = 0
61:14/0 = 0
62:14/0 = 0
63:14/0 = 0
68:14/0 = 0
69:14/0 = 0
72:14/0 = 0
73:14/0 = 0
74:14/0 = 0
75:14/0 = 0
76:14/0 = 0
77:14/0 = 0
78:14/0 = 0
79:14/0 = 0
80:14/0 = 0
81:14/0 = 0
82:14/0 = 0
83:14/0 = 0
84:14/0 = 0
85:14/0 = 0
86:14/0 = 0
90:14/0 = 0
91:14/0 = 0
92:14/0 = 0
93:14/0 = 0
94:14/0 = 0
95:14/0 = 0
0:15/0 = 0
1:15/0 = 0
2:15/0 = 0
3:15/0 = 0
4:15/0 = 0
5:15/0 = 0
6:15/0 = 0
7:15/0 = 0
8:15/0 = 0
10:15/0 = 0
11:15/0 = 0
12:15/0 = 0
13:15/0 = 0
14:15/0 = 0
15:15/0 = 0
16:15/0 = 0
17:15/0 = 0
18:15/0 = 0
19:15/0 = 0
20:15/0 = 0
21:15/0 = 0
22:15/0 = 0
23:15/0 = 0
27:15/0 = 0
28:15/0 = 0
29:15/0 = 0
30:15/0 = 0
31:15/0 = 0
32:15/0 = 0
33:15/0 = 0
34:15/0 = 0
35:15/0 = 0
36:15/0 = 0
39:15/0 = 0
40:15/0 = 0
41:15/0 = 0
42:15/0 = 0
43:15/0 = 0
44:15/0 = 0
48:15/0 = 0
49:15/0 = 0
50:15/0 = 0
51:15/0 = 0
52:15/0 = 0
53:15/0 = 0
54:15/0 = 0
55:15/0 = 0
56:15/0 = 0
57:15/0 = 0
58:15/0 = 0
59:15/0 = 0
60:15/0 = 0
61:15/0 = 0
62:15/0 = 0
63:15/0 = 0
64:15/0 = 0
65:15/0 = 0
66:15/0 = 0
67:15/0 = 0
68:15/0 = 0
69:15/0 = 0
70:15/0 = 0
71:15/0 = 0
84:15/0 = 0
85:15/0 = 0
86:15/0 = 0
90:15/0 = 0
91:15/0 = 0
92:15/0 = 0
93:15/0 = 0
94:15/0 = 0
95:15/0 = 0
46:3/0 = 0

[sub_resource type="TileSet" id="TileSet_x4xdn"]
tile_size = Vector2i(48, 48)
custom_data_layer_0/name = "Farmable"
custom_data_layer_0/type = 1
custom_data_layer_1/name = "Planted"
custom_data_layer_1/type = 1
custom_data_layer_2/name = "Harvestable"
custom_data_layer_2/type = 1
custom_data_layer_3/name = "Obstacles"
custom_data_layer_3/type = 1
custom_data_layer_4/name = "Plant_Name"
custom_data_layer_4/type = 4
sources/0 = SubResource("TileSetAtlasSource_kyndq")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_lkprx"]
texture = ExtResource("5_tqs2y")
texture_region_size = Vector2i(240, 240)
0:0/0 = 0
0:0/0/custom_data_0 = &"MC_Starch"
0:0/0/custom_data_3 = true
0:0/0/custom_data_4 = true
1:0/0 = 0
1:0/0/custom_data_0 = &"Organic_MC_Starch"
1:0/0/custom_data_1 = true
1:0/0/custom_data_3 = true
2:0/0 = 0
2:0/0/custom_data_1 = true
2:0/0/custom_data_2 = true
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0

[sub_resource type="TileSet" id="TileSet_l36hv"]
tile_size = Vector2i(240, 240)
custom_data_layer_0/name = "Plant_Name"
custom_data_layer_0/type = 21
custom_data_layer_1/name = "Playground"
custom_data_layer_1/type = 1
custom_data_layer_2/name = "Empty"
custom_data_layer_2/type = 1
custom_data_layer_3/name = "Harvestable"
custom_data_layer_3/type = 1
custom_data_layer_4/name = "Farmland"
custom_data_layer_4/type = 1
sources/0 = SubResource("TileSetAtlasSource_lkprx")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yfr1m"]
draw_center = false
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.654902, 0.00392157, 0.870588, 1)

[node name="main" type="Node2D"]

[node name="background" type="Sprite2D" parent="."]
texture = ExtResource("1_dw6wy")
centered = false

[node name="farm_map" type="TileMap" parent="."]
visible = false
tile_set = SubResource("TileSet_x4xdn")
format = 2
layer_0/tile_data = PackedInt32Array(65537, 2949120, 2, 65538, 3014656, 2, 131074, 3407872, 3, 131075, 3407872, 3, 196611, 3407872, 3, 196612, 3407872, 3, 196613, 3014656, 3, 196614, 3014656, 3, 196615, 3014656, 3, 196616, 3014656, 3, 131079, 3014656, 3, 65543, 3014656, 2, 131078, 3014656, 3, 131077, 3014656, 3, 131076, 3538944, 3, 131073, 2949120, 3, 131072, 65536, 12, 65536, 65536, 12, 196608, 65536, 12, 262144, 65536, 12, 327680, 65536, 12, 393216, 65536, 12, 458752, 65536, 12, 524288, 65536, 12, 589824, 65536, 12, 655360, 65536, 12, 720896, 65536, 12, 786432, 65536, 12, 851968, 65536, 12, 196609, 2949120, 3, 262145, 2949120, 3, 327681, 2949120, 3, 393217, 2949120, 3, 458753, 2949120, 3, 524289, 2949120, 3, 589825, 2949120, 3, 655361, 2949120, 3, 720897, 2949120, 3, 786433, 2949120, 4, 851969, 65536, 12, 196610, 3407872, 3, 262146, 3538944, 3, 327682, 3538944, 3, 393218, 3538944, 5, 458754, 3014656, 3, 524290, 3276800, 0, 589826, 3014656, 3, 655362, 3014656, 3, 720898, 3014656, 3, 786434, 3014656, 4, 851970, 65536, 12, 3, 65536, 12, 65539, 3014656, 2, 262147, 3407872, 4, 327683, 3538944, 3, 393219, 3538944, 5, 458755, 3014656, 3, 524291, 3014656, 3, 589827, 3014656, 3, 655363, 3014656, 3, 720899, 3014656, 3, 786435, 3014656, 4, 851971, 65536, 12, 4, 65536, 12, 65540, 3014656, 2, 262148, 3538944, 3, 327684, 3407872, 4, 393220, 3407872, 4, 458756, 3014656, 3, 524292, 3014656, 3, 589828, 3014656, 3, 655364, 3014656, 3, 720900, 3014656, 3, 786436, 3014656, 4, 851972, 65536, 12, 5, 65536, 12, 65541, 3014656, 2, 262149, 3014656, 3, 327685, 3014656, 3, 393221, 3014656, 3, 458757, 3014656, 3, 524293, 3276800, 0, 589829, 3014656, 3, 655365, 3014656, 3, 720901, 3014656, 3, 786437, 3014656, 4, 851973, 65536, 12, 6, 65536, 12, 65542, 3014656, 2, 262150, 3014656, 3, 327686, 3014656, 3, 393222, 3014656, 3, 458758, 3014656, 3, 524294, 3014656, 3, 589830, 3014656, 3, 655366, 3014656, 3, 720902, 3014656, 3, 786438, 3014656, 4, 851974, 65536, 12, 7, 65536, 12, 262151, 3014656, 3, 327687, 3014656, 3, 393223, 3014656, 3, 458759, 3014656, 3, 524295, 3014656, 3, 589831, 3014656, 3, 655367, 3014656, 3, 720903, 3145728, 0, 786439, 3014656, 4, 851975, 65536, 12, 8, 65536, 12, 65544, 3014656, 2, 131080, 3014656, 3, 262152, 3014656, 3, 327688, 3014656, 3, 393224, 3014656, 3, 458760, 3014656, 3, 524296, 3276800, 0, 589832, 3014656, 3, 655368, 3145728, 0, 720904, 3014656, 3, 786440, 3014656, 4, 851976, 65536, 12, 9, 65536, 12, 65545, 3014656, 2, 131081, 3014656, 3, 196617, 3014656, 3, 262153, 3014656, 3, 327689, 3014656, 3, 393225, 3014656, 3, 458761, 3276800, 0, 524297, 3014656, 3, 589833, 3014656, 3, 655369, 3145728, 0, 720905, 3014656, 3, 786441, 3014656, 4, 851977, 65536, 12, 10, 65536, 12, 65546, 3014656, 2, 131082, 3014656, 3, 196618, 3014656, 3, 262154, 3014656, 3, 327690, 3014656, 3, 393226, 3014656, 3, 458762, 3014656, 3, 524298, 3014656, 3, 589834, 3014656, 3, 655370, 3145728, 0, 720906, 3014656, 3, 786442, 3014656, 4, 851978, 65536, 12, 11, 65536, 12, 65547, 3014656, 2, 131083, 3014656, 3, 196619, 3014656, 3, 262155, 3014656, 3, 327691, 3014656, 3, 393227, 3014656, 3, 458763, 3014656, 3, 524299, 3014656, 3, 589835, 3014656, 3, 655371, 3014656, 3, 720907, 3014656, 3, 786443, 3014656, 4, 851979, 65536, 12, 12, 65536, 12, 65548, 3014656, 2, 131084, 3014656, 3, 196620, 3014656, 3, 262156, 3014656, 3, 327692, 3014656, 3, 393228, 3014656, 3, 458764, 3014656, 3, 524300, 3014656, 3, 589836, 3014656, 3, 655372, 3014656, 3, 720908, 3014656, 3, 786444, 3014656, 4, 851980, 65536, 12, 13, 65536, 12, 65549, 3014656, 2, 131085, 3014656, 3, 196621, 3014656, 3, 262157, 3014656, 3, 327693, 3014656, 3, 393229, 3014656, 3, 458765, 3014656, 3, 524301, 3014656, 3, 589837, 3014656, 3, 655373, 3014656, 3, 720909, 3014656, 3, 786445, 3014656, 4, 851981, 65536, 12, 14, 65536, 12, 65550, 3014656, 2, 131086, 3014656, 3, 196622, 3014656, 3, 262158, 3014656, 3, 327694, 3014656, 3, 393230, 3014656, 3, 458766, 3014656, 3, 524302, 3014656, 3, 589838, 3014656, 3, 655374, 3014656, 3, 720910, 3014656, 3, 786446, 3014656, 4, 851982, 65536, 12, 15, 65536, 12, 65551, 3014656, 2, 131087, 3014656, 3, 196623, 3014656, 3, 262159, 3014656, 3, 327695, 3014656, 3, 393231, 3014656, 3, 458767, 3014656, 3, 524303, 3014656, 3, 589839, 3014656, 3, 655375, 3014656, 3, 720911, 3014656, 3, 786447, 3014656, 4, 851983, 65536, 12, 16, 65536, 12, 65552, 3014656, 2, 131088, 3014656, 3, 196624, 3014656, 3, 262160, 3014656, 3, 327696, 3014656, 3, 393232, 3014656, 3, 458768, 3014656, 3, 524304, 3014656, 3, 589840, 3014656, 3, 655376, 3014656, 3, 720912, 3014656, 3, 786448, 3014656, 4, 851984, 65536, 12, 17, 65536, 12, 65553, 3014656, 2, 131089, 3014656, 3, 196625, 3014656, 3, 262161, 3014656, 3, 327697, 3014656, 3, 393233, 3014656, 3, 458769, 3014656, 3, 524305, 3014656, 3, 589841, 3014656, 3, 655377, 3014656, 3, 720913, 3014656, 3, 786449, 3014656, 4, 851985, 65536, 12, 18, 65536, 12, 65554, 3014656, 2, 131090, 3014656, 3, 196626, 3014656, 3, 262162, 3014656, 3, 327698, 3014656, 3, 393234, 3014656, 3, 458770, 3014656, 3, 524306, 3014656, 3, 589842, 3014656, 3, 655378, 3014656, 3, 720914, 3014656, 3, 786450, 3014656, 4, 851986, 65536, 12, 19, 65536, 12, 65555, 3014656, 2, 131091, 3014656, 3, 196627, 3014656, 3, 262163, 3014656, 3, 327699, 3014656, 3, 393235, 3014656, 3, 458771, 3014656, 3, 524307, 3014656, 3, 589843, 3014656, 3, 655379, 3014656, 3, 720915, 3014656, 3, 786451, 3014656, 4, 851987, 65536, 12, 20, 65536, 12, 65556, 3014656, 2, 131092, 3014656, 3, 196628, 3014656, 3, 262164, 3014656, 3, 327700, 3014656, 3, 393236, 3014656, 3, 458772, 3014656, 3, 524308, 3014656, 3, 589844, 3014656, 3, 655380, 3014656, 3, 720916, 3014656, 3, 786452, 3014656, 4, 851988, 65536, 12, 21, 65536, 12, 65557, 3014656, 2, 131093, 3014656, 3, 196629, 3014656, 3, 262165, 3014656, 3, 327701, 3014656, 3, 393237, 3014656, 3, 458773, 3014656, 3, 524309, 3014656, 3, 589845, 3014656, 3, 655381, 3014656, 3, 720917, 3014656, 3, 786453, 3014656, 4, 851989, 65536, 12, 22, 65536, 12, 65558, 3080192, 2, 131094, 3080192, 3, 196630, 3080192, 3, 262166, 3080192, 3, 327702, 3080192, 3, 393238, 3080192, 3, 458774, 3080192, 3, 524310, 3080192, 3, 589846, 3080192, 3, 655382, 3080192, 3, 720918, 3080192, 3, 786454, 3080192, 4, 851990, 65536, 12, 23, 65536, 12, 65559, 65536, 12, 131095, 65536, 12, 196631, 65536, 12, 262167, 65536, 12, 327703, 65536, 12, 393239, 65536, 12, 458775, 65536, 12, 524311, 65536, 12, 589847, 65536, 12, 655383, 65536, 12, 720919, 65536, 12, 786455, 65536, 12, 851991, 65536, 12, 0, 65536, 7, 1, 65536, 7, 2, 65536, 7)

[node name="tilemap_small" type="TileMap" parent="."]
tile_set = ExtResource("4_hqxkq")
cell_quadrant_size = 120
format = 2
layer_0/tile_data = PackedInt32Array(262147, 393216, 0, 327682, 393216, 0, 393223, 524288, 0, 327687, 458752, 0, 262156, 524288, 0, 262155, 589824, 0, 393219, 589824, 0, 262150, 589824, 0, 196618, 458752, 0, 262152, 458752, 0, 327685, 524288, 0, 393226, 524288, 0, 196610, 655360, 0, 196611, 655360, 0, 196612, 655360, 0, 196613, 655360, 0, 196614, 655360, 0, 196615, 655360, 0, 196616, 655360, 0, 196617, 655360, 0, 196619, 655360, 0, 196620, 655360, 0, 196621, 655360, 0, 262146, 655360, 0, 262148, 655360, 0, 262149, 655360, 0, 262151, 655360, 0, 262153, 655360, 0, 262154, 655360, 0, 262157, 655360, 0, 327683, 655360, 0, 327684, 655360, 0, 327686, 655360, 0, 327688, 655360, 0, 327689, 655360, 0, 327690, 655360, 0, 327691, 196608, 0, 327692, 196608, 0, 327693, 655360, 0, 393218, 655360, 0, 393220, 655360, 0, 393221, 655360, 0, 393222, 655360, 0, 393224, 655360, 0, 393225, 655360, 0, 393227, 196608, 0, 393228, 0, 0, 393229, 655360, 0)
script = ExtResource("5_84jxo")

[node name="tilemap_large_1" type="TileMap" parent="."]
position = Vector2(0, -120)
tile_set = SubResource("TileSet_l36hv")
cell_quadrant_size = 96
format = 2
script = ExtResource("6_jcq33")

[node name="tilemap_large_2" type="TileMap" parent="."]
tile_set = SubResource("TileSet_l36hv")
cell_quadrant_size = 96
format = 2
script = ExtResource("6_vscps")

[node name="tilemap_large_3" type="TileMap" parent="."]
position = Vector2(120, -120)
tile_set = SubResource("TileSet_l36hv")
cell_quadrant_size = 96
format = 2
script = ExtResource("7_rcovf")

[node name="tilemap_large_4" type="TileMap" parent="."]
position = Vector2(120, 0)
tile_set = SubResource("TileSet_l36hv")
cell_quadrant_size = 96
format = 2
script = ExtResource("8_opmnk")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
visible = false
script = ExtResource("10_5s7sa")

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0)

[node name="skip" type="Button" parent="CanvasLayer"]
offset_right = 8.0
offset_bottom = 8.0

[node name="level1" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Button" type="Button" parent="CanvasLayer/level1"]
layout_mode = 0
offset_left = 264.0
offset_top = 404.0
offset_right = 347.0
offset_bottom = 482.0
theme_override_styles/normal = SubResource("StyleBoxFlat_yfr1m")

[node name="Area2D" type="Area2D" parent="CanvasLayer/level1"]

[node name="Node2D" type="Node2D" parent="."]

[node name="global_bgm" type="AudioStreamPlayer" parent="Node2D"]
stream = ExtResource("11_mkjhu")
volume_db = -30.0

[node name="plant_potatoes" type="AudioStreamPlayer" parent="Node2D"]
stream = ExtResource("12_a2i22")

[node name="potatoes_pop" type="AudioStreamPlayer" parent="Node2D"]
stream = ExtResource("13_ar50n")
